--- a/dps-cstr.html
+++ b/dps-cstr.html
@@ -96,7 +96,7 @@
 
     <br>
     <br>
-    <button onclick="getConnectionString();">Get Connection String</button>
+    <button onclick="getConnectionString();">Get Azure IoT Central URL</button>
     <br>
     <br>
 
@@ -106,7 +106,7 @@
     <br>
 
 
-    <a href="https://github.com/gloveboxes/Azure-IoT-Central-Connection-String-Generator">GitHub Source Code for Azure IoT Central Connection String Solution</a>
+    <a href="https://github.com/gloveboxes/Azure-DPS-IoT-Central-Application-URL">GitHub Source Code for DPS get Azure IoT Central URL</a>
 
 </body>
 
