--- a/dps-cstr.html
+++ b/dps-cstr.html
@@ -71,7 +71,7 @@
 
 
 <body>
-    <h2>Azure IoT Central Connection String Generator</h2>
+    <h2>Get Azure IoT Central Application URL</h2>
 
     <table style="width:100%">
         <tr>
