--- a/dps-cstr.html
+++ b/dps-cstr.html
@@ -96,7 +96,7 @@
 
     <br>
     <br>
-    <button onclick="getConnectionString();">Get Azure IoT Central URL</button>
+    <button onclick="getConnectionString();">Get Azure IoT Central Application URL</button>
     <br>
     <br>
 
